feat(realtime): xac thuc JWT cho kenh WebSocket va vá 4 lo hong giu ghe
Kenh STOMP giu ghe truoc day khong he xac thuc: danh tinh nguoi giu ghe la
truong "userId" nam trong than thong diep, do trinh duyet tu khai va may chu
tin thang. Bat ky ai cung gui duoc mot frame de nha ghe nguoi khac dang giu,
hoac giu ghe duoi danh tinh bia ra. RateLimitingFilter khong do duoc vi no la
servlet filter, khong thay cac frame STOMP di trong mot ket noi da mo.

1. Xac thuc tai frame CONNECT (StompAuthChannelInterceptor)
   - JWT hop le  -> danh tinh "user:<email chu thuong>"
   - Token hong  -> TU CHOI CONNECT, khong am tham ha xuong phien khach
   - Khong token -> "guest:<khoa thiet bi>", giu duoc luong chon ghe truoc khi
     dang nhap
   Tien to la ranh gioi an ninh: phien khach khong tao ra duoc danh tinh
   "user:...". SeatStatusController lay danh tinh tu Principal va bo qua moi
   thu client khai; xoa ham chet isAuthenticatedUser().

2. Khong phat email ra ngoai nua
   Moi thong diep truoc day mang thang email cua nguoi dang giu ghe toi MOI
   trinh duyet dang mo trang. Nay thay bang ownerToken (HMAC-SHA256 cua danh
   tinh, 16 ky tu) — so bang duoc nhung khong hoan nguyen ve email duoc. Moi
   client hoi ma cua chinh minh qua /app/whoami.

3. Tach kenh theo chuyen
   /topic/seat-status/{tripId} thay cho mot kenh toan cuc day moi su kien cua
   moi chuyen toi moi client. LOCK_FAILED chuyen sang hang doi rieng cua phien.

4. Bo setAllowedOriginPatterns("*")
   Danh sach ten mien lay tu app.websocket.allowed-origin-patterns.

Kem theo:
- Tran 20 ghe moi danh tinh, chong giu sach ghe de chan nguoi khac dat ve.
- Chuyen chu ghe luc khach dang nhap giua chung gop ve mot thao tac phia may
  chu (/app/seat-handover). Truoc day frontend tu nha roi giu lai, giua hai
  luot ghe that su trong vai chuc ms, du de nguoi khac chen vao.
- Gom 5 cho tu goi convertAndSend("/topic/seat-status") ve SeatStatusBroadcaster.

Kiem thu:
- StompAuthChannelInterceptorTest, SeatStatusControllerTest, S